# categoricalclustering

./: README.md  pyproject.toml
categoricalclustering/: __init__.py  catred_.py  coolcat_.py  limbo_.py  visualization.py
example/: better_notebook.ipynb  elma2019.xlsx  example_notebook.ipynb
